--- a/Fake_news_detection.ipynb
+++ b/Fake_news_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Fake_news_detection.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6SsqOdEm51Zjgi2YPBXrs",
+      "authorship_tag": "ABX9TyOshAWqEft/wbEjHIqdnnCX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -421,7 +421,7 @@
         "        self.data = dataframe\n",
         "        self.text = dataframe.Text\n",
         "        # Approach B\n",
-        "        self.text_tag = dataframe.Text_Tag\n",
+        "        #self.text_tag = dataframe.Text_Tag\n",
         "        self.targets = dataframe.Labels\n",
         "        self.tokenizer = tokenizer\n",
         "        self.max_len = max_len\n",
@@ -434,12 +434,12 @@
         "        text = \" \".join(text.split())\n",
         "\n",
         "        # Approach B\n",
-        "        text_tag = str(self.text_tag[idx])\n",
+        "        #text_tag = str(self.text_tag[idx])\n",
         "\n",
         "        inputs = self.tokenizer.encode_plus(\n",
         "            text,\n",
         "            # Approach B\n",
-        "            text_tag,#None,#\n",
+        "            None,#text_tag,\n",
         "            max_length=self.max_len,\n",
         "            padding='max_length',\n",
         "            return_token_type_ids=True,\n",
@@ -924,7 +924,22 @@
             "\n",
             " ==================================================================== \n",
             "\n",
-            "Train -> Epoch: 12, Loss: 0.01572139643394621, Accuracy: 0.638427734375\n"
+            "Train -> Epoch: 12, Loss: 0.01572139643394621, Accuracy: 0.638427734375\n",
+            "Valid -> Epoch: 12, Loss: 0.0643530982779339, Accuracy: 0.2431640625\n",
+            "\n",
+            " ==================================================================== \n",
+            "\n",
+            "Train -> Epoch: 13, Loss: 0.01476028857723577, Accuracy: 0.6671142578125\n",
+            "Valid -> Epoch: 13, Loss: 0.0659009573282674, Accuracy: 0.24462890625\n",
+            "\n",
+            " ==================================================================== \n",
+            "\n",
+            "Train -> Epoch: 14, Loss: 0.013772673584753647, Accuracy: 0.6956787109375\n",
+            "Valid -> Epoch: 14, Loss: 0.067956913204398, Accuracy: 0.2412109375\n",
+            "\n",
+            " ==================================================================== \n",
+            "\n",
+            "Train -> Epoch: 15, Loss: 0.012858929534559138, Accuracy: 0.7156982421875\n"
           ],
           "name": "stdout"
         }
